css/style.css
/* Remove the navbar's default margin-bottom and rounded borders */
.navbar {
  margin-bottom: 0;
  border-radius: 0;
  background-color: rgb(25, 29, 32);
}

.my_list {
  list-style-type: square;
  padding: 1px;
  /* overflow: hidden; */
  background-color: rgb(25, 29, 32);
  position: relative;
  top: 0;
}

.my_li {
  border-right:1px solid rgb(25, 29, 32);
  background-color: rgb(25, 29, 32);
}

.my_paragraph {
  padding: 0;
  margin:0;
}

a {
  color: white;
}

h1 {
  color: rgb(47, 115, 152);
}

.table-dark th {
  background: rgb(47, 115, 152);
  border: none;
}

.table-dark td {
  background: rgb(33, 37, 46); /* rgb(25, 29, 32);  */
  border: none;
}

.greyedtable th {
  background: grey; /* rgb(25, 29, 32);  */
}
.greyedtable td {
  color: grey;
}

input, select, option, textarea {
  background: rgb(33, 37, 46);
  border: 1px solid grey;
  color: white;
}

a:hover {
  color: rgb(47, 115, 152);
  text-decoration: none;
}

/* Set height of the grid so .sidenav can be 100% (adjust as needed) */
.row.content {height: 450px}

/* Set gray background color and 100% height */
.sidenav {
  padding-top: 20px;
  background: rgb(25, 29, 32);
  /* color: white; */
  height: 100%;
  width: 10%;
}

#left_sidenav {
  padding-top: 20px;
  background: rgb(47, 115, 152);
  height: 100%;
  width: 20%;
}

#right_sidenav {
  padding-top: 20px;
  background: rgb(25, 29, 32);
  /* border: 2px solid rgb(25, 29, 32); */
  height: 100%;
  width: 20%;
}

/* these class styles below are for the coloring of finances and each type */
.incomes {
  color: rgb(77, 255, 77);

}
.expenses {
  color: rgb(68, 68, 255);
}


/* Set black background color, white text and some padding */
footer {
  background-color: rgb(25, 29, 32);
  color: white;
  padding: 15px;
}

body {
  background-color: rgb(33, 37, 46);
  color: white;
  height: 100%;
}

/* On small screens, set height to 'auto' for sidenav and grid */
@media screen and (max-width: 767px) {
  .sidenav {
    height: auto;
    padding: 15px;
  }
  .row.content {height:auto;}
}






/* for my custom navbar */
ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  /* overflow: hidden; */
  background: rgb(25, 29, 32);
  position: -webkit-sticky; /* Safari */
  position: sticky;
  top: 0;
}

li {
  float: left;
  border-right:1px solid #bbb;
}

li:last-child {
  border-right: none;
}

li a, .dropbtn {
  display: inline-block;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

#diet_li_a {
  padding: 0;
}


li.dropdown {
  display: inline-block;
}

.dropdown-content {
  right: 0px;
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 2;
}

.dropdown-content a {
  color: black;
  padding: 9px 10px;
  text-decoration: none;
  display: block;
  text-align: left;
}

.dropdown-content a:hover {background-color: #f1f1f1;}

.dropdown:hover .dropdown-content {
  display: block;
}

